--- a/src/partials/sct-exercises.html
+++ b/src/partials/sct-exercises.html
@@ -1,5 +1,5 @@
-<div class="exercises-group-list">
-  <load src="partials/home-block-2.html" />
+<load src="partials/home-block-2.html" />
+<div class="exercises-group-list container">
   <div class="static-block-wrapper">
     <load src="partials/quote-of-day.html" />
     <load src="partials/exercises-static-block.html" />
