--- a/src/css/exercise-info.css
+++ b/src/css/exercise-info.css
@@ -121,6 +121,7 @@
     display: flex;
     gap: 10px;
     flex-direction: column;
+    margin-top: 40px;
 }
 
 @media screen and (min-width: 768px) {
@@ -129,6 +130,7 @@
         flex-direction: row;
         justify-content: end;
         gap: 7px;
+        margin-top: 0;
     }
 }
 
