--- a/src/css/modal/modal.css
+++ b/src/css/modal/modal.css
@@ -62,7 +62,13 @@
     min-height: 200px;
     background: var(--color-popup-bg);
     border-radius: 20px;
+    max-height: 90vh;
     opacity: 0;
+    overflow-y: auto;
+}
+
+.modal::-webkit-scrollbar {
+    display: none;
 }
 
 .backdrop.is-open .modal {
